auth re-add working